--- a/.github/workflows/lernos-produktionskette.yml
+++ b/.github/workflows/lernos-produktionskette.yml
@@ -16,6 +16,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: 3.x
+      - run: pip install mkdocs
       - run: mkdocs build -f ./mkdocs.yml
 
       # Geänderte Datein zurück ins Repository committen
