--- a/.github/workflows/lernos-produktionskette.yml
+++ b/.github/workflows/lernos-produktionskette.yml
@@ -17,6 +17,7 @@ jobs:
         with:
           python-version: 3.x
       - run: pip install mkdocs
+      - run: pip install pymdown-extensions
       - run: mkdocs build -f ./mkdocs.yml
 
       # Geänderte Datein zurück ins Repository committen
