Seite Auf-/Abbau hinzugefügt

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,6 +12,7 @@ nav:
 - Lokation: location.md
 - Programm: program.md
 - Abendprogramm: party.md
+- Auf-/Abbau: logistics.md
 - Archiv: archive.md
 - Toolset:
   - Discord: discord.md
