--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,6 +8,7 @@ nav:
 - Startseite: index.md
 - Kommunikation: communication.md
 - Vorab-Webkonferenz: pre-call.md
+- Merch: merch.md
 - Anreise: getting-there.md
 - Vorabend: eve.md
 - Lokation: location.md
