loscon Everywhere ergänzt

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,6 +12,7 @@ nav:
 - Anreise: getting-there.md
 - Vorabend: eve.md
 - Lokation: location.md
+- Dezentrale Lokationen: loscon-everywhere.md
 - Programm: program.md
 - Abendprogramm: party.md
 - Netzwerk: network.md
