Infos zu Kommunikation ergänzt
Linkedin-Event angelegt (aber noch nicht eingeladen)

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,6 +26,7 @@ nav:
 - Orga:
   - Orga-Team: orga-team.md
   - Design: design.md
+  - Infoseiten bearbeiten: infopages.md
   - Auf-/Abbau: logistics.md
 
 theme:
