Infos zu Lokation und Anreise ergänzt

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,6 +9,7 @@ nav:
 - Kommunikation: communication.md
 - Vorab-Webkonferenz: pre-call.md
 - Merch: merch.md
+- Mitbringen: to-bring.md
 - Anreise: getting-there.md
 - Vorabend: eve.md
 - Lokation: location.md
