--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,6 +52,7 @@ extra:
           link: 'https://www.linkedin.com/showcase/lern-os'
         - icon: fontawesome/brands/github
           link: 'https://github.com/cogneon'
+    giscus: true
 
 
 markdown_extensions:
