--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,19 +11,21 @@ repo_url: 'https://github.com/cogneon/loscon24'
 nav:
 - Startseite: index.md
 - Kommunikation: communication.md
-- Vorab-Webkonferenz: pre-call.md
-- Merch: merch.md
-- Mitbringen: to-bring.md
-- Anreise: getting-there.md
-- Vorabend: eve.md
-- Lokation: location.md
-- Dezentrale Lokationen: loscon-everywhere.md
-- Programm: program.md
-- Abendprogramm: party.md
-- Barrierefreiheit: accessibility.md
-- Badge: badge.md
-- Archiv: archive.md
 - FAQ: faq.md
+- Vorbereitung:
+  - Vorab-Webkonferenz: pre-call.md
+  - Merch: merch.md
+  - Mitbringen: to-bring.md
+  - Anreise: getting-there.md
+  - Vorabend: eve.md
+- Veranstaltungsort:
+  - Die Burg: location.md
+  - Dezentrale Lokationen: loscon-everywhere.md
+  - Barrierefreiheit: accessibility.md
+- Programm:
+  - Programm: program.md
+  - Abendprogramm: party.md
+  - Archiv: archive.md
 - Toolset:
   - Netzwerk: network.md
   - Discord: discord.md
@@ -33,6 +35,7 @@ nav:
   - Design: design.md
   - Infoseiten bearbeiten: infopages.md
   - Auf-/Abbau: logistics.md
+  - Badge: badge.md
 
 theme:
     name: readthedocs
