--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,3 +1,4 @@
+site_name: Infoseiten zur lernOS Convention 2024 (2.-3. Juli 2024)
 site_name: lernOS Convention 2024
 site_url: https://cogneon.github.io/cogneon/loscon24
 docs_dir: src
@@ -66,3 +67,4 @@ markdown_extensions:
 
 plugins:
   - search
+  - rss
