--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,7 @@ nav:
 - Kommunikation: communication.md
 - FAQ: faq.md
 - Vorbereitung:
+  - lernOS KI MOOC: ai-mooc.md
   - Vorab-Webkonferenz: pre-call.md
   - Merch: merch.md
   - Mitbringen: to-bring.md
