Infos zur Burg ergänzt

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,7 +21,7 @@ nav:
   - Anreise: getting-there.md
   - Vorabend: eve.md
 - Veranstaltungsort:
-  - Die Burg: location.md
+  - Burg Nürnberg: location.md
   - Dezentrale Lokationen: loscon-everywhere.md
   - Barrierefreiheit: accessibility.md
 - Programm:
