Javascript für Analytics eingefügt
Anleitung: https://github.com/mkdocs/mkdocs/issues/1794 (nicht über den Weg, den Material vorschlägt).

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,7 +52,12 @@ copyright: Creative Commons Namensnennung 4.0 International (CC BY)
 extra_css:
   - loscon24.css
 
+extra_javascript:
+  - javascripts/matomo.js
+
 extra:
+    analytics:
+       provider: custom
     giscus: true
 
 markdown_extensions:
