--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -40,6 +40,7 @@ nav:
   - Auf-/Abbau: logistics.md
   - Badge: badge.md
   - Stückliste: bom.md
+  - Email: email.md
 
 theme:
     name: readthedocs
