URL von github.io auf lernos.org angepasst

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: Infoseiten zur lernOS Convention 2024 (2.-3. Juli 2024)
 site_name: lernOS Convention 2024
-site_url: https://cogneon.github.io/cogneon/loscon24
+site_url: https://loscon24.lernos.org
 docs_dir: src
 site_dir: docs
 edit_uri: ""
