--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: lernOS Convention 2024
-site_deescription: Infoseiten zur lernOS Convention 2024 mit allen Informationen zur Veranstaltung am 2.-3. Juli 2024.
+site_description: Infoseiten zur lernOS Convention 2024 mit allen Informationen zur Veranstaltung am 2.-3. Juli 2024.
 site_url: https://loscon.lernos.org
 docs_dir: src
 site_dir: docs
