Seite Nachhaltigkeit angelegt

--- a/de/mkdocs.yml
+++ b/de/mkdocs.yml
@@ -19,6 +19,7 @@ nav:
   - Merch: merch.md
   - Mitbringen: to-bring.md
   - Anreise: getting-there.md
+  - Nachhaltigkeit: sustainability.md
   - Vorabend: eve.md
 - Veranstaltungsort:
   - Burg Nürnberg: location.md
