--- a/de/mkdocs.yml
+++ b/de/mkdocs.yml
@@ -17,6 +17,7 @@ nav:
   - lernOS KI MOOC: kimooc24.md
   - Vorab-Webkonferenz: pre-call.md
   - Merch: merch.md
+  - lernOS Smart Card: smartcard.md
   - Mitbringen: to-bring.md
   - Anreise: getting-there.md
   - Nachhaltigkeit: sustainability.md
