Podcast-Tisch ergänzt

--- a/de/mkdocs.yml
+++ b/de/mkdocs.yml
@@ -26,6 +26,7 @@ nav:
   - Burg Nürnberg: location.md
   - Dezentrale Lokationen: loscon-everywhere.md
   - Barrierefreiheit: accessibility.md
+  - Podcast-Tisch: podcasting.md
 - Programm:
   - Coworking: coworking.md
   - Programm: program.md
