Lego Tisch und Bibliothek ergänzt

--- a/de/mkdocs.yml
+++ b/de/mkdocs.yml
@@ -26,7 +26,10 @@ nav:
   - Burg Nürnberg: location.md
   - Dezentrale Lokationen: loscon-everywhere.md
   - Barrierefreiheit: accessibility.md
+  - Lego-Tisch: lego.md
   - Podcast-Tisch: podcasting.md
+  - Bibliothek: library.md
+
 - Programm:
   - Coworking: coworking.md
   - Programm: program.md
